samples/_failures_safe/1761661353_549367_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bdc984e6.c: In function ‘main’:
./samples/SAFE/__tmp_bdc984e6.c:177:5: error: expected declaration or statement at end of input
  177 |     size_t len = strlen(input);
      |     ^~~~~~
